--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,10 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 29
 
+    if (project.android.hasProperty("namespace")) {
+        namespace 'fr.g123k.flutterappbadge.flutterappbadger'
+    }
+
     defaultConfig {
         minSdkVersion 16
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
